--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "overrides": {
-    "vue": "latest"
-  },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.10.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
